fix: make purplish colors more readable

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,6 @@ h1 {
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
-    background-color: #202020;
+    background-color: rgb(3, 4, 0);
   }
 }
